# ntoseye

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  dist-workspace.toml
.github/: FUNDING.yml
commands/: README.md  ivshmem.py  offense.py  pscount.py
examples/: README.md  breakpoint_trace.py  inspect_process.py  list_processes.py  search_details.py  step_and_handles.py  walk_modules.py  walk_struct.py
ntoseye-py/: .gitignore  Cargo.toml  README.md  build-wheel.sh  pyproject.toml
ntoseye-py/python/ntoseye/: __init__.py  __init__.pyi  repl.py  repl.pyi
ntoseye-py/src/: lib.rs
scripts/: callbacks.lua  devobj.lua  drvobj.lua  ethread.lua  ethreads.lua  hide.lua  irp.lua  irps.lua  lpe.lua  object.lua  ssdt.lua
scripts/misc/: ivshmem_patch.lua
skills/ntoseye-windows-driver-debugging/: SKILL.md
skills/ntoseye-windows-driver-debugging/agents/: openai.yaml
skills/ntoseye-windows-driver-debugging/references/: agent-stdio.md
skills/ntoseye-windows-driver-debugging/scripts/: qga-exec.py
src/: agent.rs  backend.rs  bugchecks.rs  cli.rs  dbg_backend.rs  debugger.rs  diagnostics.rs  disasm.rs  error.rs  expr.rs  gdb.rs  guest.rs  host.rs  lib.rs  main.rs  mcp.rs  memory.rs  memory_backend.rs  repl.rs  script.rs  session.rs  symbols.rs  target.rs  types.rs  ui.rs  unwind.rs  view.rs  virsh.rs
src/expr/: tests.rs
src/gdb/: breakpoints.rs  mod.rs  registers.rs
src/inspect/: descriptors.rs  local_symbols.rs  mod.rs  pool.rs
src/kd/: api.rs  context.rs  debug_io.rs  event_loop.rs  framing.rs  mod.rs  wire.rs
src/python/: embed.rs  mod.rs
src/repl/: aliases.rs  bugcheck.rs  command.rs  completion.rs  disasm.rs  line_editor.rs  memory_view.rs  mod.rs  pool.rs  stop.rs
src/repl/commands/: breakpoints.rs  exec.rs  inspect.rs  memory.rs  meta.rs  mod.rs  process.rs  symbols.rs
